syntax = "proto3";

option java_multiple_files = true;
option java_package = "se.umu.cs.ads.chord";

package chord;

service ChordService {
	rpc healthCheck(HealthCheckRequest) returns (HealthCheckResponse); // Check status of node
}

message HealthCheckRequest {}

message HealthCheckResponse {
	bool status = 1;
}
